cambio tukesis dorpdown

--- a/tukesis.html
+++ b/tukesis.html
@@ -42,8 +42,8 @@
                                     <a href="#productos" class="nav-link active">Oferta</a>
                                 </li>
 
-                                <!--Menu desplegable-->
-                                <li class="nav-item dropdown">
+                                 <!--Menu desplegable-->
+                                 <li class="nav-item dropdown">
                                     <a  href="#" 
                                         class="nav-link active dropdown-toggle"
                                         data-bs-toggle="dropdown"
@@ -59,10 +59,10 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#direccion" class="nav-link active">Direccion</a>
+                                    <a href="tukesis.html#direccion" class="nav-link active">Direccion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#contacto" class="nav-link active">Contacto</a>
+                                    <a href="tukesis.html#contacto" class="nav-link active">Contacto</a>
                                 </li>
                             </ul>
                         </div>
@@ -436,21 +436,35 @@
                         </form>
                     </article>
                 </section>
-          ss://org.eclipse.ui.workbench/org.eclipse.ui.internal.StandardTrim">
-        <tags>stretch</tags>
-      </children>
-      <children xsi:type="menu:ToolControl" xmi:id="_77D26fBsEe6hnr3BSC5hVA" elementId="org.eclipse.ui.HeapStatus" contributorURI="platform:/plugin/org.eclipse.platform" toBeRendered="false" contributionURI="bundleclass://org.eclipse.ui.workbench/org.eclipse.ui.internal.StandardTrim">
-        <tags>Draggable</tags>
-      </children>
-      <children xsi:type="menu:ToolControl" xmi:id="_77D26vBsEe6hnr3BSC5hVA" elementId="org.eclipse.ui.ProgressBar" contributorURI="platform:/plugin/org.eclipse.platform" contributionURI="bundleclass://org.eclipse.ui.workbench/org.eclipse.ui.internal.StandardTrim">
-        <tags>Draggable</tags>
-      </children>
-    </trimBars>
-    <trimBars xmi:id="_77D29fBsEe6hnr3BSC5hVA" elementId="org.eclipse.ui.trim.vertical1" contributorURI="platform:/plugin/org.eclipse.platform" toBeRendered="false" side="Left">
-      <children xsi:type="menu:ToolControl" xmi:id="_77D29vBsEe6hnr3BSC5hVA" elementId="org.eclipse.ui.ide.perspectivestack(minimized)" toBeRendered="false" contributionURI="bundleclass://org.eclipse.e4.ui.workbench.addons.swt/org.eclipse.e4.ui.workbench.addons.minmax.TrimStack">
-        <persistedState key="XSize" value="1639"/>
-        <persistedState key="YSize" value="980"/>
-        <tags>TrimStack</tags>
-        <tags>Draggable</tags>
-      </children>
-      <children xsi:type="menu:ToolControl" xmi:id="
+            </div>
+        </div>
+    </div>
+
+                <!-- PIE DE PAGINA -->
+    <div class="container-fluid bg-dark">
+        <div class="container">
+        <section class="row text-light d-flex">
+            <article class="order-1 order-md-0 col-12 col-md-8 pt-3 order-1">
+                <p class="text-center text-md-start">Copyright &copy;2024 - Desarrollado por: Cecilia Andrea Loza</p>
+            </article>
+            <article class=" pt-2 order-0 order-md-1 col-12 col-md-4 d-flex justify-content-evenly ">
+                <a class="link-light link-opacity-75-hover" target="_blank" href="https://www.facebook.com/itboliviamar.edu.bo">
+                    <i class="bi bi-facebook fs-3"></i>
+                </a>
+                <a class="link-light link-opacity-75-hover" target="_blank" href="https://www.youtube.com/@institutotecnologicobolivi4717">
+                    <i class="bi bi-youtube fs-3"></i>
+                </a>
+                <a class="link-light link-opacity-75-hover" target="_blank " href="https://www.facebook.com/itboliviamar.edu.bo">
+                    <i class="bi bi-instagram fs-3"></i>
+                </a>
+                <a class="link-light link-opacity-75-hover" target="_blank" href="https://wa.link/1r4gdj">
+                    <i class="bi bi-whatsapp fs-3"></i>
+                </a>
+            </article>
+        </section>
+         </div>
+    </div>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
