cambio de tamaños en cards

--- a/eventos.html
+++ b/eventos.html
@@ -81,10 +81,10 @@
             <!-- Tarea agregar 12 productos en cards -->
             <article class="card col-12   my-3">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <img src="img/audiovisual.png" class="img-fluid rounded-start">
                     </div>
-                    <div class="col-8">
+                    <div class="col-md-8">
                     <div class="card-body">
                         <h5>Servivios audiovisuales</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -96,10 +96,10 @@
 
             <article class="card col-12  my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/matrimonio.jpg" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Un dia especial</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -110,13 +110,14 @@
                 </article>
                 <article class="card col-12 my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/escapada.jpg" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Escapada romantica</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro mollitia at accusantium explicabo repellendus nam dolore magnam obcaecati a eos pariatur earum maxime dolorum fuga nihil reiciendis blanditiis, cupiditate sunt.
+
                             Amet, et libero. Cum nihil ipsam tenetur minima maiores, nemo iusto officia vel aut? Consequuntur recusandae, voluptatem corporis alias placeat dignissimos pariatur qui magni quasi, aut, molestias labore nulla maiores!</p>
                             <a href="#" class="btn btn-light">Leer mas</a>
                           </div>       
@@ -125,10 +126,10 @@
                 </article>
                 <article class="card col-12  my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/audiovisual.png" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Centro de convenciones</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
