--- a/habitaciones.html
+++ b/habitaciones.html
@@ -76,7 +76,7 @@
     <div class="container" id="productos">
         <section class="row py-5">
             <div class="col-12">
-                <h2 class="text-center">Paquetes especiales</h2>
+                <h2 class="text-center">Habitaciones</h2>
             </div>
             <!-- Tarea agregar 12 productos en cards -->
             <article class="col-12 col-md-6 col-lg-4 my-5">
