--- a/paquetes.html
+++ b/paquetes.html
@@ -81,10 +81,10 @@
             <!-- Tarea agregar 12 productos en cards -->
             <article class="card col-12   my-3">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <img src="img/spa.jpg" class="img-fluid rounded-start">
                     </div>
-                    <div class="col-8">
+                    <div class="col-md-8">
                       <div class="card-body">
                         <h5>Spa</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -96,10 +96,10 @@
 
             <article class="card col-12  my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/gimnasio.webp" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Gimnasio</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -110,10 +110,10 @@
                 </article>
                 <article class="card col-12 my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/suite.jpg" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Hidromasaje</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -124,10 +124,10 @@
                 </article>
                 <article class="card col-12  my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/lounge.jpg" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Lounge</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -138,10 +138,10 @@
                 </article>
                 <article class="card col-12  my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/peluqueria.jpg" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Peluqueria</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -152,10 +152,10 @@
                 </article>
                 <article class="card col-12  my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/piscina1.jpg" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Relax Pool</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
