--- a/restaurantes.html
+++ b/restaurantes.html
@@ -81,10 +81,10 @@
             <!-- Tarea agregar 12 productos en cards -->
             <article class="card col-12   my-3">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <img src="img/alma.jpg" class="img-fluid rounded-start">
                     </div>
-                    <div class="col-8">
+                    <div class="col-md-8">
                       <div class="card-body">
                         <h5>Hermoso jardin tematico</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -96,10 +96,10 @@
 
             <article class="card col-12  my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/bar.jpg" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Un dia especial</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -110,10 +110,10 @@
                 </article>
                 <article class="card col-12 my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/terraza.jpg" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Terraza</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
@@ -124,10 +124,10 @@
                 </article>
                 <article class="card col-12  my-3">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4">
                             <img src="img/comodidad.png" class="img-fluid rounded-start">
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8">
                           <div class="card-body">
                             <h5>Confort y comodidad</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem optio voluptatum minus voluptatibus a sint tempora at, qui ullam sed quasi aliquam deleniti ex temporibus et. Officiis, iste itaque?</p>
