--- a/tukesis.html
+++ b/tukesis.html
@@ -136,8 +136,8 @@
         </header>
     </div>
 
-     <!-- SOBRE NOSOTROS -->
-     <div class="container " id="nosotros">
+    <!-- SOBRE NOSOTROS -->
+    <div class="container " id="nosotros">
         <section class="row py-5">
             <div class="col-12">
                 <h2 class="text-center">Sobre Nosotros</h2>
@@ -161,14 +161,13 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat enim consectetur, voluptatum illo cum aut sunt laborum illum accusamus facilis!</p>
             </article>
         </section>
-     </div>
+    </div>
 
         <div class="container-fluid imagen-fondo">
             <div class="color-fondo p-5">
                 <div class="container text-start">
                     <h3>Acerca de Tukesis</h3>
-                    <p class="w-75 me-auto fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus possimus aliquam, veritatis sunt corporis repudiandae harum, praesentium doloremque modi quidem ad quisquam nesciunt, numquam porro aliquid ea libero quo ducimus!
-                    Excepturi assumenda, aperiam totam in illo eum error doloremque veniam sequi iste. Reiciendis atque deleniti asperiores soluta qui numquam perspiciatis, eligendi expedita beatae provident perferendis. Exercitationem a ea impedit temporibus.</p>
+                    <p class="w-75 me-auto fs-6 fs-md-5">La Empresa Hotelera TUKESIS fue fundada en 1972 con el objetivo de ofrecer servicios de hospedaje de alta calidad a turistas nacionales e internacionales. A lo largo de los años, la empresa ha crecido y se ha adaptado a las demandas del mercado, implementando mejoras continuas en sus servicios y procesos</p>
                 </div> 
             </div>  
         </div>
@@ -191,7 +190,7 @@
                             <span class="float-start badge rounded-pill bg-success">Con descuento</span> 
                             <span class="float-end price-hp">12354.00&euro;</span> 
                         </div> 
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</> 
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
                             <a href="#" class="btn btn-warning">Ver mas</a> 
                         </div> 
