Se añadio eventos.html

--- a/eventos.html
+++ b/eventos.html
@@ -71,14 +71,12 @@
         </header>
     </div>
 
-    <!-- PRODUCTOS -->
-    <!-- Tarea agregar 12 productos en cards -->
+    <!-- EVENTOS -->
     <div class="container" id="productos">
         <section class="row py-5">
             <div class="col-12">
                 <h2 class="text-center">Eventos Sociales</h2>
             </div>
-            <!-- Tarea agregar 12 productos en cards -->
             <article class="card col-12   my-3">
                 <div class="row">
                     <div class="col-md-4">
