Se modifico habitaciones.html y card.css

--- a/habitaciones.html
+++ b/habitaciones.html
@@ -72,7 +72,6 @@
     </div>
 
     <!-- PRODUCTOS -->
-    <!-- Tarea agregar 12 productos en cards -->
     <div class="container" id="productos">
         <section class="row py-5">
             <div class="col-12">
@@ -88,7 +87,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -104,7 +103,7 @@
                         </div> 
                         <p >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -120,7 +119,7 @@
                         </div> 
                         <p >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -136,7 +135,7 @@
                         </div> 
                         <p class="fs-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -152,7 +151,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -168,7 +167,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -184,7 +183,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -200,7 +199,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -216,7 +215,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -232,7 +231,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -248,7 +247,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
@@ -262,9 +261,9 @@
                             <span class="float-start badge rounded-pill bg-primary">Disponible</span> 
                             <span class="float-end price-hp">12354.00&euro;</span> 
                         </div> 
-                        <h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</h5> 
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Check offer</a> 
+                            <a href="#" class="btn btn-success">Check offer</a> 
                         </div> 
                     </div> 
                 </div>
