se modifico btn en tukesis.html

--- a/tukesis.html
+++ b/tukesis.html
@@ -192,7 +192,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-success">Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
@@ -208,7 +208,7 @@
                         </div> 
                         <p >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-success">Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
@@ -224,7 +224,7 @@
                         </div> 
                         <p >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-success">Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
@@ -240,7 +240,7 @@
                         </div> 
                         <p class="fs-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-success">Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
@@ -256,7 +256,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-success">Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
@@ -272,7 +272,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-success">Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
@@ -288,7 +288,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-success">Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
@@ -304,7 +304,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-wsuccbtn-success>Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
@@ -320,7 +320,7 @@
                         </div> 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</p> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-success">Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
@@ -368,7 +368,7 @@
                         </div> 
                         <h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe, iste optio laudantium sed aliquam sequi.</h5> 
                         <div class="text-center my-4"> 
-                            <a href="#" class="btn btn-warning">Ver mas</a> 
+                            <a href="#" class="btn btn-success">Ver mas</a> 
                         </div> 
                     </div> 
                 </div>
